Remove CodeCrafters artifacts and initialize pi-java standalone repository