@@ -1,35 +1,66 @@
-[![progress-banner](https://backend.codecrafters.io/progress/claude-code/975d48d8-9c72-43b1-8577-ff2a6899e13b)](https://app.codecrafters.io/users/vinnipukh?r=2qF)
+# pi-java
 
-This is a starting point for Java solutions to the
-["Build Your own Claude Code" Challenge](https://codecrafters.io/challenges/claude-code).
+A lightweight Java implementation and port of the Pi coding agent.
 
-Claude Code is an AI coding assistant that uses Large Language Models (LLMs) to
-understand code and perform actions through tool calls. In this challenge,
-you'll build your own Claude Code from scratch by implementing an LLM-powered
-coding assistant.
+`pi-java` is an autonomous coding agent loop written in Java using Java 25 and OpenAI-compatible tool calling. It connects to LLM endpoints (such as OpenRouter) to understand requests, plan steps, and interact with your workspace via local tools.
 
-Along the way you'll learn about HTTP RESTful APIs, OpenAI-compatible tool
-calling, agent loop, and how to integrate multiple tools into an AI assistant.
+---
 
-**Note**: If you're viewing this repo on GitHub, head over to
-[codecrafters.io](https://codecrafters.io) to try the challenge.
+## Features
 
-# Passing the first stage
+- **Agent Loop:** Multi-turn conversational loop handling model responses and dynamic tool call execution.
+- **Built-in Tools:**
+  - `read_file`: Inspect and read workspace files.
+  - `write_file`: Create or update workspace files.
+  - `bash`: Execute terminal / shell commands.
+- **Flexible Provider:** Supports OpenRouter or any OpenAI-compatible API endpoint via environment variables.
 
-The entry point for your `claude-code` implementation is in
-`src/main/java/Main.java`. Study and uncomment the relevant code, and submit to
-pass the first stage:
+---
 
-```sh
-codecrafters submit
+## Prerequisites
+
+- **Java 25+** (preview features enabled)
+- **Maven 3.9+**
+- An **OpenRouter API key** (or OpenAI-compatible key)
+
+---
+
+## Environment Setup
+
+Set your API key:
+
+### Linux / macOS (Bash)
+```bash
+export OPENROUTER_API_KEY="your-api-key-here"
+# Optional:
+export OPENROUTER_BASE_URL="https://openrouter.ai/api/v1"
 ```
 
-# Stage 2 & beyond
+### Windows (PowerShell)
+```powershell
+$env:OPENROUTER_API_KEY = "your-api-key-here"
+# Optional:
+$env:OPENROUTER_BASE_URL = "https://openrouter.ai/api/v1"
+```
 
-Note: This section is for stages 2 and beyond.
+---
 
-1. Ensure you have `mvn` installed locally.
-2. Run `./your_program.sh` to run your program, which is implemented in
-   `src/main/java/Main.java`.
-3. Run `codecrafters submit` to submit your solution to CodeCrafters. Test
-   output will be streamed to your terminal.
+## Building and Running
+
+### 1. Build the JAR
+```bash
+mvn clean package
+```
+
+This compiles the project and generates a standalone JAR at `target/pi-java.jar`.
+
+### 2. Run the Agent
+```bash
+java --enable-preview -jar target/pi-java.jar -p "List all files in the current directory and explain what this project does"
+```
+
+---
+
+## License
+
+MIT License
